--- a/Application/Manager/View/Index/center.html
+++ b/Application/Manager/View/Index/center.html
@@ -404,7 +404,7 @@ $("#date1").val(strDate2);
 $("#date2").val(strDate);
 		});
 </script>
-<div id="sign_code" class="easyui-window" title="微信签到" style="width:1280px;height:600px"   
+<div id="sign_code" class="easyui-window" title="微信二维码签到" style="width:1280px;height:600px"   
         data-options="iconCls:'icon-save',modal:true,closed:true"> 
 </div>
 <div id="part_tree" class="easyui-tabs" fit="true" border="false">
@@ -434,7 +434,7 @@ $("#date2").val(strDate);
 			<div data-options="region:'west',collapsed:false,width:'40%'">
 				<div id="tb1">
 					<a href="#" class="easyui-linkbutton" iconCls="icon-add"
-						onclick="sign_code();">开启点到</a>
+						onclick="sign_code();">二维码点到</a>
 						<a href="#" class="easyui-linkbutton"
 						iconCls="icon-reload" style="float: right;"
 						onclick="$('#tg_partree').treegrid('reload');"></a>
