--- a/Application/Manager/View/Login/index.html
+++ b/Application/Manager/View/Login/index.html
@@ -75,7 +75,8 @@
 						<td></td>
 						<td><img style="width: 180px; height: 50px" alt="点击刷新" id="login_code_img"
 							src="__MODULE__/Code/getCode"
-							onclick="javascript:this.src='__MODULE__/Code/getCode?'+Math.random();"></td>
+							onclick="javascript:this.src='__MODULE__/Code/getCode?'+Math.random();">
+						</td>
 					</tr>
 				</table>
 			</form>
