--- a/Application/Tenant/View/Index/center.html
+++ b/Application/Tenant/View/Index/center.html
@@ -1,6 +1,5 @@
-
 <script type="text/javascript">
-	$(function() {
+	$(function() {			
 		var cur_index = 0;
 		$('#tg_partree').treegrid(
 				{
@@ -579,5 +578,7 @@
 		</div>
 	</div>
 	<div title="点名者管理"  data-options="href:'__MODULE__/index/manager.html'">
+	</div>
+	<div title="订购服务"  data-options="href:'__MODULE__/index/dingguo.html'">
 	</div>
 </div>
