--- a/Application/Tenant/View/Login/index.html
+++ b/Application/Tenant/View/Login/index.html
@@ -20,14 +20,35 @@
 				if(obj['status']){
 					window.location="__MODULE__/Index/index";
 				}else{
-					show_slide("登录失败",obj['info'])   ;
+					show_slide("登录失败",obj['info']);
 					$("#login_code_img").click();
+				}  
+		    }  
+		});
+		$('#registerForm').form({
+			url : '__MODULE__/Login/doRegister',
+			onSubmit : function() {
+				// do some check    
+				// return false to prevent submit; 
+				if (!$('#registerForm').form('validate'))
+					return false;
+				return true;
+			},
+			success:function(data){ 
+				var obj=eval('('+data+')');
+				if(obj['status']){
+					window.location="__MODULE__/Index/index";
+				}else{
+					show_slide("注册失败",obj['info']);					
 				}  
 		    }  
 		});
 	});
 	function doPostLoginForm() {
 		$('#loginForm').submit();
+	}
+	function doPostRegisterForm() {
+		$('#registerForm').submit();
 	}
 	function show_slide(v_title, v_msg) {
 		v_title = v_title ? v_title : "消息提示";
@@ -39,15 +60,24 @@
 			showType : 'slide'
 		});
 	}
+	function register(){
+		$('#loginForm').css("display","none");
+		$('#registerForm').css("display","block");
+		$('.panel-title').text(function(i,origText){
+			return "租户注册";
+		});
+	}
 </script>
+<style>
+ #registerForm input{
+ 	width: 151px;
+ }
+</style>
 </head>
 <body>
-	<div style=""></div>
-	<div class="easyui-window"
-		data-options="modal:true,closable:false,collapsible:false,minimizable:false,maximizable:false,draggable:false,resizable:false"
-		title="租户登录" style="width: 400px">
-		<div style="padding: 10px 60px 20px 60px">
-			<form id="loginForm" method="post" action="__MODULE__/Login/doLogin">
+	<div class="easyui-window" data-options="modal:true,closable:false,collapsible:false,minimizable:false,maximizable:false,draggable:false,resizable:false" title="租户登录" style="width: 400px">
+		<div style="padding: 10px 60px 20px 60px">			
+			<form id="loginForm" method="post" action="__MODULE__/Login/doLogin" style="display:block">
 				<table cellpadding="5">
 					<tr>
 						<td>用户名:</td>
@@ -68,13 +98,39 @@
 							onclick="javascript:this.src='__MODULE__/Code/getCode?'+Math.random();"></td>
 					</tr>
 				</table>
-			</form>
 			<div style="text-align: center;">
-				<a href="javascript:void(0)" class="easyui-linkbutton c1"
-					style="width: 100px" onclick="doPostLoginForm();">安全登录</a>
+				<a href="javascript:void(0)" class="easyui-linkbutton c1" style="width: 80px" onclick="register();">注册</a>&nbsp&nbsp		
+				<a href="javascript:void(0)" class="easyui-linkbutton c1" style="width: 80px" onclick="doPostLoginForm();">登录</a>
 			</div>
+			</form>	
+			<form id="registerForm" method="post" action="__MODULE__/Login/doRegister" style="display:none">
+				<table cellpadding="5">					
+					<tr>
+						<td>用户名:</td>
+						<td><input type="text" name="name" class="easyui-textbox" required="required"/></td>
+					</tr>
+					<tr>
+						<td>密码:</td>
+						<td><input type="password" name="password" class="easyui-textbox" required="required"/></td>
+					</tr>
+					<tr>
+						<td>确认密码:</td>
+						<td><input type="password" name="password1" class="easyui-textbox" required="required"/></td>
+					</tr>
+					<tr>
+						<td>电话:</td>
+						<td><input type="text" name="telephone" class="easyui-textbox" required="required"/></td>
+					</tr>
+					<tr>
+						<td>邮箱:</td>
+						<td><input type="text" name="email" class="easyui-textbox" required="required"/></td>
+					</tr>							
+				</table>
+				<div  style="text-align: center;">		
+				<a href="javascript:void(0)" class="easyui-linkbutton c1" style="width: 100px" onclick="doPostRegisterForm();">确认</a>
+			</div>
+			</form>	
 		</div>
 	</div>
-
 </body>
 </html>
